--- a/DuplicateManagment/DuplicateManagment.csproj
+++ b/DuplicateManagment/DuplicateManagment.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
       <PackageReference Include="StackExchange.Redis" Version="2.6.90" />
       <PackageReference Include="System.Runtime.Caching" Version="7.0.0" />
     </ItemGroup>
